# multinational_project

./: .gitignore  README.md  config.py  main.py  pyproject.toml
data/processed/: cleaned_data.csv
models/: base.py
src/data_preparation/: pipeline.py
src/data_preparation/preprocessor/: english_translator.py  preprocess.py  text_concatenator.py
src/evaluation/: tracker.py
src/models/: data_model.py  randomforest.py  randomforestchain.py
