[project]
name = "multinational-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "mlflow>=1.27.0",
    "pandas>=3.0.1",
    "protobuf==3.20.3",
    "sacremoses>=0.1.1",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "stanza>=1.11.1",
    "torch>=2.11.0",
    "transformers>=5.3.0",
]
